syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertConditionStateOneOfProto";

import "sdc/biceps/alertconditionstate.proto";
import "sdc/biceps/limitalertconditionstate.proto";

message AlertConditionStateOneOfMsg {
  oneof alert_condition_state_one_of {
    AlertConditionStateMsg alert_condition_state = 1;
    LimitAlertConditionStateMsg limit_alert_condition_state = 2;
  }
}
